--- a/gophish-ssl.conf
+++ b/gophish-ssl.conf
@@ -10,11 +10,11 @@
 		ProxyVia Full
 		
 		<Proxy *>
- 		Require all granted
+		Require all granted
 		</Proxy>
 
-		ProxyPass / http://localhost
-		ProxyPassReverse / http://localhost
+		ProxyPass / http://127.0.0.1:8443	
+		ProxyPassReverse / http://127.0.0.1:8443
 
 		# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 		# error, crit, alert, emerg.
